client/src/components/course-work/coursework.css
.course-work__container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
}

.section-heading {
  font-size: 2rem;
  margin-bottom: 3rem;
  color: #21ba45;
  font-family: "Poppins", sans-serif;
  letter-spacing: 2px;
  /* font-weight: 800; */
}

.section {
  position: relative;
  border-radius: 10px;
  padding: 1rem;
  margin-bottom: 2rem;
  background-color: #21ba45;
  color: white;
  font-size: 1.5rem;
  cursor: pointer;
  font-family: "Poppins", sans-serif;
  letter-spacing: 2px;
  font-size: 1.3rem;
}
.section-opened {
  position: relative;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  padding: 1rem;
  margin-bottom: 0.5rem;
  background-color: #21ba45;
  color: white;
  font-size: 1.5rem;
  cursor: pointer;
  font-family: "Poppins", sans-serif;
  letter-spacing: 2px;
  font-size: 1.3rem;
}

.section-icon {
  position: absolute;
  transform: translate(-50%, -50%);
  right: 0.75rem;
  top: 50%;
}

.units-container {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
}

.unit {
  display: inline-block;
  font-size: 1.2rem;
  color: grey;
  position: relative;
  left: 1rem;
  margin-bottom: 0.5rem;
  font-weight: lighter;
  cursor: pointer;
  font-family: "Poppins", sans-serif;
  letter-spacing: 2px;
  font-size: 1rem;
}

.unit-opened {
  color: black;
}

.unit-models-container {
  display: flex;
  flex-direction: column;
  margin-top: 0.5rem;
  border-left: 1px solid grey;
}

.unit-models-item {
  display: flex;
  align-content: flex-start;
  align-items: center;
  font-size: 1rem;
  margin-left: 0.5rem;
  padding: 0.25rem;
  font-size: 0.9rem;
  cursor: pointer;
  width: calc(100% - 1.5rem);
  transition-duration: 0.1s;
}
.opened-model-item {
  color: black;
}

.unit-models-item:hover {
  color: #21ba45;
  background-color: rgba(0, 0, 0, 0.05);
}
.unit-models-item:active {
  color: white;
  background-color: rgba(0, 0, 0, 0.2);
}

.unit-models-item:first-of-type {
  padding: 0 0.25rem 0.25rem 0.25rem;
}
.unit-models-item:last-of-type {
  padding: 0.25rem 0.25rem 0 0.25rem;
}

.models-icon {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  border: 3px solid #21ba45;
  background-color: lightgreen;
  margin-right: 0.5rem;
}

